2015-08-09  John David Anglin  <danglin@gcc.gnu.org>

	[BZ #18480]
	* sysdeps/unix/sysv/linux/hppa/sysdep.h (LOAD_ARGS_0, LOAD_ARGS_1,
	LOAD_ARGS_2, LOAD_ARGS_3, LOAD_ARGS_4, LOAD_ARGS_5, LOAD_ARGS_6):
	Define.
	(LOAD_REGS_0, LOAD_REGS_1, LOAD_REGS_2, LOAD_REGS_3, LOAD_REGS_4,
	LOAD_REGS_5, LOAD_REGS_6): Update.
	(INTERNAL_SYSCALL): Update using new LOAD defines.
	(INTERNAL_SYSCALL_NCS): Likewise.
	* sysdeps/unix/sysv/linux/hppa/syscall.c (syscall): Likewise.

2015-08-08  Paul Pluzhnikov  <ppluzhnikov@google.com>

	[BZ #16734]
	* libio/genops.c (_IO_unbuffer_all): Free wide buffer as well.

2015-08-08  Paul Pluzhnikov  <ppluzhnikov@google.com>

	[BZ #17905]
	* catgets/Makefile (tst-catgets-mem): New test.
	* catgets/catgets.c (catopen): Don't use unbounded alloca.
	* catgets/open_catalog.c (__open_catalog): Likewise.
	* catgets/tst-catgets.c (do_bz17905): Test unbounded alloca.

2015-08-08  John David Anglin  <danglin@gcc.gnu.org>

	[BZ #18787]
	* sysdeps/unix/sysv/linux/hppa/bits/atomic.h (_LWS_CLOBBER): Revise
	clobber registers.
	(atomic_compare_and_exchange_val_acq): Use register asms to assign
	operand registers.  Use register %r20 for EAGAIN and EDEADLOCK checks.
	Cast return to __typeof (oldval).

2015-08-08  Mike Frysinger  <vapier@gentoo.org>

	* sysdeps/unix/sysv/linux/microblaze/sysdep.h: Wrap the whole file
	in _LINUX_MICROBLAZE_SYSDEP_H defines.  Include sysdeps/unix/sysdep.h
	and delete sys/syscall.h include.

2015-08-07  Joseph Myers  <joseph@codesourcery.com>

	[BZ #16517]
	* sysdeps/ieee754/dbl-64/s_tan.c: Include <float.h>.
	(tan): Force underflow exception for arguments with small absolute
	value.
	* sysdeps/ieee754/flt-32/k_tanf.c: Include <float.h>.
	(__kernel_tanf): Force underflow exception for arguments with
	small absolute value.
	* sysdeps/ieee754/ldbl-128/k_tanl.c: Include <float.h>.
	(__kernel_tanl): Force underflow exception for arguments with
	small absolute value.
	* sysdeps/ieee754/ldbl-128ibm/k_tanl.c: Include <float.h>.